[package]
name = "ipfi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ], optional = true }
rmp-serde = { version = "1", optional = true }
rmp = { version = "0.8", optional = true }
thiserror = "1"
dashmap = "5.4.0"
crossbeam-queue = "0.3"

[dev-dependencies]
once_cell = "1"

[features]
default = [ "wire", "serde" ]

wire = []
serde = [ "dep:serde", "rmp-serde", "rmp" ]
