[package]
name = "ipfi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ], optional = true }
rmp-serde = { version = "1", optional = true }
rmp = { version = "0.8", optional = true }
thiserror = "1"
dashmap = "5.4.0"
crossbeam-queue = "0.3"

[dev-dependencies]
once_cell = "1"
rayon = "1"

[features]
default = [ "wire", "serde", "int-u16" ]

wire = []
serde = [ "dep:serde", "rmp-serde", "rmp" ]

# These are mutually exclusive features that govern which integer type is used internally. When you know approximately
# how many messages you need to be sending and receiving, this can be extremely useful to reduce memory usage.
int-u8 = []
int-u16 = []
int-u32 = []
int-u64 = []
