[package]
name = "ipfi-bench-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-bench-server"
path = "src/server.rs"

[[bin]]
name = "grpc-bench-client"
path = "src/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }

[build-dependencies]
tonic-build = "0.9"
