[package]
name = "ipfi-bench-ipfi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ipfi-bench-server"
path = "src/server.rs"

[[bin]]
name = "ipfi-bench-client"
path = "src/client.rs"

[dependencies]
ipfi = { path = "../../", default-features = false, features = [ "wire", "serde", "int-u16" ] }
once_cell = "1"
rayon = "1"
