[package]
name = "ipfi-bench-ipfi-async"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ipfi-async-bench-server"
path = "src/server.rs"

[[bin]]
name = "ipfi-async-bench-client"
path = "src/client.rs"

[dependencies]
ipfi = { path = "../../", default-features = false, features = [ "wire", "serde", "int-u16", "async" ] }
once_cell = "1"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "net", "time" ] }
